--- a/themes/hexo-snippet/layout/index.ejs
+++ b/themes/hexo-snippet/layout/index.ejs
@@ -28,6 +28,11 @@
     <div class="post-content">
         <div class="post-head home-post-head">
             <h1 class="post-title">
+				<% if (post.top >= 10000) { %>
+            		<i class="fa fa-thumb-tack"></i>
+            		<font color=7D26CD>置顶</font>
+            		<span class="post-meta-divider">|</span>
+				<% } %>
                 <a href="<%- url_for(post.path) %>"><%- post.title %></a>
             </h1>
             <div class="post-meta">  &bull;
